# DocumentIntelligencePipeline

./: .env.example  .gitignore  Dockerfile  GITHUB_SUMMARY.md  IMPLEMENTATION_GUIDE.md  PROJECT_STATUS.md  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
scripts/: generate_project.py  quickstart.sh
src/: __init__.py  config.py
src/core/: __init__.py  exceptions.py
src/extractors/prompts/: __init__.py  classification.py  invoice.py  menu.py  receipt.py
src/processors/: __init__.py  base.py  image_processor.py  pdf_processor.py
src/utils/: __init__.py  hashing.py  logging.py  metrics.py  retry.py
